  - Added scrollbar buttons to the Configuration Tool,
    so that the scrollbars better resemble the style of
    the Windows 3.1 scrollbars.
  - The help window for the Configuration Tool will now
    display possible and default values for the config
    options in addition to the descriptions. (Wengier)
  - Updated the MMX patch code by kekko. (Wengier)
  - Improved the compatibility of AUTOTYPE command with
    games like Asterix & Obelix. (Wengier)
  - The config options ttf.wpbg, ttf.bold, ttf.italic,
    ttf.underline, ttf.strikeout can now be modified
    dynamically via CONFIG -SET ... commands. (Wengier)
  - Added menu item "Save logging as..." (under "Help"
    -> "Debugging options") to save the current logging
    content to the specified file. (Wengier)
  - Added slirp backend support for the NE2000 network
    feature (in addition to the existing pcap backend).
    There are config sections named [ethernet, slirp]
    and [ethernet, pcap] now to set the options for the
    slirp and pcap backends respectively. (Jookia)
  - FAT driver can now support PC-98 HDI images with
    partitions that start at any physical sector even
    if the start is not a multiple of the ratio of
    logical to physical sector size. This allows the
    HDI image of Dragon Knight 4 to mount.
  - Fixed Windows 95/98 installation failures caused by
    FAT driver and DOS API changes in previous version.
  - Fixed well-intended but erroneous fall through case
    in the INT15 handler that prevented 3rd party mouse
    drivers from detecting the PS/2 mouse.
  - Fixed the color issue with the Configuration Tool
    in the macOS SDL1 build. (ant_222)
  - Fixed switching ttf.cols, ttf.lins, and ttf.font
    options dynamically in full-screen mode. (Wengier)
  - Fixed setting option "ttf.wp=xy3" or "ttf.wp=xy4"
    not working (but "ttf.wp=xy" did work). (Wengier)
  - Fixed preview function in WordStar not working for
    TrueType font output in previous version. (Wengier)